--- a/components/Common/Select/index.module.css
+++ b/components/Common/Select/index.module.css
@@ -59,8 +59,10 @@
 }
 
 .dropdown {
-  @apply max-w-xs
+  @apply max-h-48
+    max-w-xs
     overflow-hidden
+    overflow-y-auto
     rounded-md
     border
     border-neutral-200
