Revert "hotfix: add bg to language dropdown"
This reverts commit c80b9b593abbf85cad249d633688cd2698420dac.

--- a/components/Common/LanguageDropDown/index.module.css
+++ b/components/Common/LanguageDropDown/index.module.css
@@ -19,10 +19,8 @@
     rounded
     border
     border-neutral-200
-    bg-white
     shadow-lg
-    dark:border-neutral-900
-    dark:bg-neutral-950;
+    dark:border-neutral-900;
 
   > div {
     @apply max-h-80
