--- a/components/Containers/MetaBar/index.module.css
+++ b/components/Containers/MetaBar/index.module.css
@@ -18,6 +18,10 @@
     xs:border-t-neutral-200
     xs:dark:border-t-neutral-900;
 
+  dl {
+    @apply w-full;
+  }
+
   dt {
     @apply mb-2
       text-sm
