--- a/components/Common/Tabs/index.module.css
+++ b/components/Common/Tabs/index.module.css
@@ -1,33 +1,39 @@
-.tabsList {
-  @apply flex
-    gap-2
-    font-open-sans;
+.tabsRoot {
+  @apply max-w-full;
 
-  .tabsTrigger {
-    @apply border-b-2
-      border-b-transparent
-      px-1
-      pb-[11px]
-      text-sm
-      font-semibold
-      text-neutral-800
-      dark:text-neutral-200;
+  .tabsList {
+    @apply flex
+      gap-2
+      overflow-x-auto
+      font-open-sans;
 
-    &[data-state='active'] {
-      @apply border-b-green-600
-        text-green-600
-        dark:border-b-green-400
-        dark:text-green-400;
+    .tabsTrigger {
+      @apply whitespace-nowrap
+        border-b-2
+        border-b-transparent
+        px-1
+        pb-[11px]
+        text-sm
+        font-semibold
+        text-neutral-800
+        dark:text-neutral-200;
+
+      &[data-state='active'] {
+        @apply border-b-green-600
+          text-green-600
+          dark:border-b-green-400
+          dark:text-green-400;
+      }
     }
-  }
 
-  .addons {
-    @apply ml-auto
-      border-b-2
-      border-b-transparent
-      px-1
-      pb-[11px]
-      text-sm
-      font-semibold;
+    .addons {
+      @apply ml-auto
+        border-b-2
+        border-b-transparent
+        px-1
+        pb-[11px]
+        text-sm
+        font-semibold;
+    }
   }
 }
