--- a/layouts/layouts.module.css
+++ b/layouts/layouts.module.css
@@ -116,6 +116,7 @@
 
     &:nth-of-type(2) {
       @apply flex
+          min-w-0
           max-w-md
           flex-[1_1]
           flex-col
@@ -125,7 +126,7 @@
           lg:max-w-3xl;
 
       > div {
-        @apply w-fit;
+        @apply w-fit max-w-full;
       }
 
       > p {
