fix: use w-full rather than w-fit for code on homepage

--- a/layouts/layouts.module.css
+++ b/layouts/layouts.module.css
@@ -127,7 +127,7 @@
           lg:max-w-3xl;
 
       > div {
-        @apply w-fit
+        @apply w-full
           max-w-md
           md:max-w-full;
       }
