--- a/layouts/layouts.module.css
+++ b/layouts/layouts.module.css
@@ -61,6 +61,7 @@
 .centeredLayout {
   @apply flex
     w-full
+    min-w-0
     items-center
     justify-center
     px-4
@@ -116,7 +117,8 @@
 
     &:nth-of-type(2) {
       @apply flex
-          max-w-md
+          min-w-0
+          max-w-full
           flex-[1_1]
           flex-col
           items-center
@@ -125,7 +127,9 @@
           lg:max-w-3xl;
 
       > div {
-        @apply w-fit;
+        @apply w-full
+          max-w-md
+          md:max-w-full;
       }
 
       > p {
