--- a/components/Downloads/ChangelogModal/index.module.css
+++ b/components/Downloads/ChangelogModal/index.module.css
@@ -3,11 +3,9 @@
     inset-0
     flex
     justify-center
-    bg-white
-    bg-opacity-90
-    backdrop-blur-lg
-    dark:bg-neutral-950
-    dark:bg-opacity-80;
+    bg-white/40
+    backdrop-blur-[2px]
+    dark:bg-neutral-950/40;
 
   .content {
     @apply relative
@@ -37,7 +35,11 @@
       block
       size-6
       cursor-pointer
-      sm:hidden;
+      rounded
+      focus:outline-none
+      focus:ring-2
+      focus:ring-neutral-200
+      dark:focus:ring-neutral-900;
   }
 
   .title {
