fix: layout shift on blogs due to i18n comps

--- a/layouts/layouts.module.css
+++ b/layouts/layouts.module.css
@@ -147,6 +147,7 @@
   @apply flex
     w-full
     justify-center
+    overflow-x-hidden
     bg-gradient-subtle
     dark:bg-gradient-subtle-dark
     xs:bg-none
