--- a/components/Common/Search/States/index.module.css
+++ b/components/Common/Search/States/index.module.css
@@ -84,9 +84,13 @@
     rounded-md
     p-2
     text-left
-    text-sm
-    hover:bg-neutral-300
-    dark:hover:bg-neutral-900;
+    text-sm;
+
+  &[data-state='selected'],
+  &:hover {
+    @apply bg-neutral-300
+      dark:bg-neutral-900;
+  }
 }
 
 .fulltextSearchResultTitle {
