--- a/components/Common/Tabs/index.module.css
+++ b/components/Common/Tabs/index.module.css
@@ -24,6 +24,15 @@
           dark:border-b-green-400
           dark:text-green-400;
       }
+
+      &.dark {
+        @apply text-neutral-200;
+      }
+
+      &.dark[data-state='active'] {
+        @apply !border-b-green-400
+          !text-green-400;
+      }
     }
 
     .addons {
