style: add searchbar shortcut indicator styles

--- a/components/Common/Search/index.module.css
+++ b/components/Common/Search/index.module.css
@@ -23,3 +23,11 @@
     top-[8px]
     size-5;
 }
+
+.shortcutIndicator {
+  @apply invisible
+    absolute
+    right-2
+    ml-2
+    md:visible;
+}
