fix(search): Optimize transition and apply style directly to kbd

--- a/components/Common/Search/index.module.css
+++ b/components/Common/Search/index.module.css
@@ -29,8 +29,8 @@
     absolute
     right-2
     ml-2
-    transition-opacity
-    duration-500
-    md:visible
-    [&>kbd]:font-ibm-plex-mono;
+    font-ibm-plex-mono
+    motion-safe:transition-opacity
+    motion-safe:duration-100
+    md:visible;
 }
