--- a/styles/markdown.css
+++ b/styles/markdown.css
@@ -75,10 +75,11 @@ main {
       dark:text-white;
   }
 
-  a {
+  a,
+  .anchor {
     @apply text-green-600
       dark:text-green-400
-      xs:underline;
+      xs:font-semibold;
 
     &:hover {
       @apply text-green-900
@@ -86,7 +87,7 @@ main {
     }
 
     &[role='button'] {
-      @apply xs:no-underline;
+      @apply xs:font-regular;
     }
 
     &:has(code) {
