--- a/components/Common/Search/index.module.css
+++ b/components/Common/Search/index.module.css
@@ -29,6 +29,8 @@
     absolute
     right-2
     ml-2
-    md:visible
-    [&>kbd]:font-ibm-plex-mono;
+    font-ibm-plex-mono
+    motion-safe:transition-opacity
+    motion-safe:duration-100
+    md:visible;
 }
