--- a/components/Common/Search/States/index.module.css
+++ b/components/Common/Search/States/index.module.css
@@ -86,7 +86,7 @@
     text-left
     text-sm;
 
-  &[data-state='selected'],
+  &[aria-selected='true'],
   &:hover {
     @apply bg-neutral-300
       dark:bg-neutral-900;
