--- a/components/Common/Search/index.module.css
+++ b/components/Common/Search/index.module.css
@@ -8,7 +8,7 @@
     pr-4
     text-left
     text-sm
-    text-neutral-700
+    text-neutral-800
     hover:bg-neutral-300
     hover:text-neutral-900
     dark:bg-neutral-900
@@ -28,8 +28,10 @@
   @apply invisible
     absolute
     right-2
-    ml-2
-    font-ibm-plex-mono
+    px-1
+    font-["Inter",var(--font-ibm-plex-mono)]
+    text-xs
+    leading-5
     motion-safe:transition-opacity
     motion-safe:duration-100
     md:visible;
