refactor: absolute positioning removed

--- a/components/Common/Search/index.module.css
+++ b/components/Common/Search/index.module.css
@@ -1,12 +1,10 @@
 .searchButton {
-  @apply relative
+  @apply flex
     w-52
+    gap-2
     rounded-md
     bg-neutral-200
-    py-2
-    pl-9
-    pr-4
-    text-left
+    p-2
     text-sm
     text-neutral-800
     hover:bg-neutral-300
@@ -18,20 +16,19 @@
 }
 
 .magnifyingGlassIcon {
-  @apply absolute
-    left-2
-    top-[8px]
-    size-5;
+  @apply size-5;
 }
 
 .shortcutIndicator {
   @apply invisible
-    absolute
-    right-2
+    flex
+    flex-1
+    items-center
+    justify-end
+    self-center
     px-1
     font-ibm-plex-mono
     text-xs
-    leading-5
     motion-safe:transition-opacity
     motion-safe:duration-100
     md:visible;
