refactor/fix: Move sidebar from article to base layout
* refactor/fix: Move navbar to base layout
* feat: Provider and hook to hide sidebar in not-found and error pages
* test: Sidebar provider and hook
* refactor/fix: Article layout responsiveness
* feat: Sticky navbar, metabar and sidebar

Signed-off-by: abizek <abishekilango@protonmail.com>

--- a/components/Common/ProgressionSidebar/index.module.css
+++ b/components/Common/ProgressionSidebar/index.module.css
@@ -1,28 +1,45 @@
 .wrapper {
-  @apply flex
-    flex-col
-    gap-8
-    overflow-auto
-    border-r
-    border-neutral-200
+  @apply w-full
+    border-r-0
     bg-white
-    px-4
-    py-6
-    dark:border-neutral-900
     dark:bg-neutral-950
     md:max-w-xs
-    lg:px-6
-    xs:w-full
-    xs:border-r-0;
+    md:border-r
+    md:border-r-neutral-200
+    md:dark:border-r-neutral-900;
 
-  > section {
-    @apply flex
-      xs:hidden;
-  }
+  > aside {
+    @apply sticky
+      top-0
+      -mt-16
+      pt-16;
 
-  > span {
-    @apply hidden
-      w-full
-      xs:flex;
+    > nav {
+      @apply flex
+        max-h-[calc(100svh-4rem)]
+        flex-col
+        items-center
+        gap-8
+        overflow-y-auto
+        px-4
+        py-6
+        [scrollbar-color:theme(colors.neutral.200)_transparent]
+        [scrollbar-width:thin]
+        dark:[scrollbar-color:theme(colors.neutral.600)_transparent]
+        md:items-start
+        lg:px-6;
+
+      > span {
+        @apply flex
+          w-full
+          max-w-2xl
+          md:hidden;
+      }
+
+      > section {
+        @apply hidden
+        md:flex;
+      }
+    }
   }
 }
