--- a/components/Containers/MetaBar/index.module.css
+++ b/components/Containers/MetaBar/index.module.css
@@ -1,22 +1,34 @@
 .wrapper {
-  @apply flex
-    flex-col
-    items-start
-    gap-8
+  @apply w-full
+    border-t
+    border-t-neutral-200
+    dark:border-t-neutral-900
+    lg:max-w-xs
+    lg:border-l
+    lg:border-t-0
+    lg:border-l-neutral-200
+    lg:dark:border-l-neutral-900;
+
+  nav {
+    @apply sticky
+      top-0
+      pl-6
+      lg:-mt-16
+      lg:pt-16;
+  }
+
+  dl {
+    @apply w-full
     overflow-y-auto
-    border-l
-    border-l-neutral-200
-    px-4
-    py-6
-    dark:border-l-neutral-900
-    md:max-w-xs
-    lg:px-6
-    xs:mt-8
-    xs:w-full
-    xs:border-l-0
-    xs:border-t
-    xs:border-t-neutral-200
-    xs:dark:border-t-neutral-900;
+    pb-20
+    pr-10
+    pt-6
+    [scrollbar-color:theme(colors.neutral.200)_transparent]
+    [scrollbar-width:thin]
+    dark:[scrollbar-color:theme(colors.neutral.600)_transparent]
+    md:pb-6
+    lg:max-h-[calc(100svh-4rem)];
+  }
 
   dt {
     @apply mb-2
@@ -53,7 +65,7 @@
       @apply flex
         list-none
         flex-col
-        gap-1.5
+        gap-0.5
         p-0;
     }
 
