--- a/components/Containers/Sidebar/SidebarItem/index.module.css
+++ b/components/Containers/Sidebar/SidebarItem/index.module.css
@@ -1,15 +1,22 @@
 .sideBarItem {
   @apply flex
     w-full
-    list-none
-    text-neutral-800
-    dark:text-neutral-200;
+    list-none;
 
   a {
     @apply inline-flex
       items-center
       gap-2
-      p-2;
+      p-2
+      text-neutral-800
+      dark:text-neutral-200;
+
+    &.active {
+      @apply rounded
+        bg-green-600
+        text-white
+        dark:text-white;
+    }
   }
 
   .label {
@@ -23,11 +30,4 @@
       text-neutral-500
       dark:text-neutral-200;
   }
-}
-
-.active {
-  @apply rounded
-    bg-green-600
-    text-white
-    dark:text-white;
 }
