--- a/layouts/layouts.module.css
+++ b/layouts/layouts.module.css
@@ -214,9 +214,9 @@
 
     main {
       @apply max-w-[660px]
-        gap-4;
+        gap-4
+        break-all;
 
-      word-break: break-all;
     }
   }
 }
