style: fix linting

--- a/components/Containers/MetaBar/index.module.css
+++ b/components/Containers/MetaBar/index.module.css
@@ -8,6 +8,7 @@
     border-l-neutral-200
     px-4
     py-6
+    [overflow-wrap:anywhere]
     dark:border-l-neutral-900
     md:max-w-xs
     lg:px-6
@@ -16,8 +17,7 @@
     xs:border-l-0
     xs:border-t
     xs:border-t-neutral-200
-    xs:dark:border-t-neutral-900
-    [overflow-wrap:anywhere];
+    xs:dark:border-t-neutral-900;
 
   dt {
     @apply mb-2
