--- a/components/Common/GlowingBackdrop/index.module.css
+++ b/components/Common/GlowingBackdrop/index.module.css
@@ -24,7 +24,8 @@
     @apply absolute
       inset-0
       m-auto
-      h-[600px]
+      aspect-[1.67]
+      max-w-[1004px]
       object-cover
       text-neutral-300
       dark:text-neutral-900/75;
