--- a/components/Containers/MetaBar/index.module.css
+++ b/components/Containers/MetaBar/index.module.css
@@ -8,6 +8,7 @@
     border-l-neutral-200
     px-4
     py-6
+    [overflow-wrap:anywhere]
     dark:border-l-neutral-900
     md:max-w-xs
     lg:px-6
