--- a/components/Containers/Sidebar/SidebarGroup/index.module.css
+++ b/components/Containers/Sidebar/SidebarGroup/index.module.css
@@ -6,14 +6,12 @@
 }
 
 .groupName {
-  @apply border-b-2
-    border-neutral-200
-    px-2
+  @apply px-2
+    py-1
     text-xs
     font-semibold
     text-neutral-800
-    dark:border-neutral-800
-    dark:text-neutral-200;
+    dark:text-neutral-600;
 }
 
 .itemList {
