feat(metabar): Add avatarGroup on learn section (#6467)
* feat(metabar): allow Avatar

* fix(styles): overflow

* story: add more avatar on MetaBar

* fix: scrollbar on avatar

* update/clean logic

* update style

* feat(metabar): use breakpoint for limit of avatar

---------

Co-authored-by: Claudio W <cwunder@gnome.org>

--- a/components/Containers/MetaBar/index.module.css
+++ b/components/Containers/MetaBar/index.module.css
@@ -19,6 +19,10 @@
     xs:border-t-neutral-200
     xs:dark:border-t-neutral-900;
 
+  dl {
+    @apply w-full;
+  }
+
   dt {
     @apply mb-2
       text-sm
