--- a/components/Common/AvatarGroup/index.module.css
+++ b/components/Common/AvatarGroup/index.module.css
@@ -1,5 +1,7 @@
 .avatarGroup {
-  @apply flex
-    h-8
-    items-center;
+  @apply -mb-4
+    flex
+    items-center
+    overflow-x-auto
+    pb-4;
 }
