--- a/components/Containers/Sidebar/SidebarGroup/index.module.css
+++ b/components/Containers/Sidebar/SidebarGroup/index.module.css
@@ -7,10 +7,11 @@
 
 .groupName {
   @apply px-2
+    py-1
     text-xs
     font-semibold
     text-neutral-800
-    dark:text-neutral-200;
+    dark:text-neutral-600;
 }
 
 .itemList {
