--- a/layouts/layouts.module.css
+++ b/layouts/layouts.module.css
@@ -215,7 +215,8 @@
     main {
       @apply max-w-[660px]
         gap-4
-        break-all;
+        break-all
+        lg:break-normal;
     }
   }
 }
