--- a/styles/base.css
+++ b/styles/base.css
@@ -1,6 +1,6 @@
 * {
   @apply subpixel-antialiased
-    transition-colors;
+    motion-safe:transition-colors;
 }
 
 html,
@@ -10,10 +10,10 @@ body {
 }
 
 body {
-  @apply scroll-smooth
-    bg-white
+  @apply bg-white
     font-open-sans
     text-neutral-950
+    motion-safe:scroll-smooth
     dark:bg-neutral-950
     dark:text-white;
 }
