move up the hover logic up by one from nav.label to nav hover .label

--- a/components/Containers/NavBar/NavItem/index.module.css
+++ b/components/Containers/NavBar/NavItem/index.module.css
@@ -22,8 +22,10 @@
     .label {
       @apply text-neutral-900
         dark:text-white;
+    }
 
-      &:hover {
+    &:hover {
+      .label {
         @apply text-green-400
           dark:text-green-400;
       }
