prevent text color change when active

--- a/components/Containers/NavBar/NavItem/index.module.css
+++ b/components/Containers/NavBar/NavItem/index.module.css
@@ -24,7 +24,7 @@
         dark:text-white;
     }
 
-    &:hover {
+    &:not(.active):hover {
       .label {
         @apply text-green-400
           dark:text-green-400;
