fix(layouts): Responsiveness
Signed-off-by: abizek <abishekilango@protonmail.com>

--- a/components/Common/CodeTabs/index.module.css
+++ b/components/Common/CodeTabs/index.module.css
@@ -10,9 +10,9 @@
       border-t
       border-neutral-900
       bg-neutral-950
-      px-4
+      px-2
       pt-3
-      xs:px-2;
+      md:px-4;
 
     .trigger {
       @apply border-b
