--- a/components/Common/ProgressionSidebar/index.module.css
+++ b/components/Common/ProgressionSidebar/index.module.css
@@ -1,28 +1,28 @@
 .wrapper {
   @apply flex
+    w-full
     flex-col
     gap-8
     overflow-auto
-    border-r
+    border-r-0
     border-neutral-200
     bg-white
     px-4
     py-6
     dark:border-neutral-900
     dark:bg-neutral-950
+    sm:border-r
     md:max-w-xs
-    lg:px-6
-    xs:w-full
-    xs:border-r-0;
+    lg:px-6;
 
   > section {
-    @apply flex
-      xs:hidden;
+    @apply hidden
+      sm:flex;
   }
 
   > span {
-    @apply hidden
+    @apply flex
       w-full
-      xs:flex;
+      sm:hidden;
   }
 }
