--- a/layouts/layouts.module.css
+++ b/layouts/layouts.module.css
@@ -7,41 +7,54 @@
 
 .articleLayout {
   @apply mx-auto
-    grid
+    block
     w-full
     max-w-8xl
-    grid-rows-[1fr]
-    overflow-hidden
-    grid-areas-[sidebar_main_metabar,sidebar_footer_metabar]
-    sm:grid-cols-[theme(spacing.52)_1fr_theme(spacing.52)]
-    xl:grid-cols-[theme(spacing.80)_1fr_theme(spacing.80)]
-    xs:m-0
-    xs:block
-    xs:overflow-auto;
+    overflow-auto
+    sm:grid
+    sm:grid-cols-[theme(spacing.52)_1fr]
+    sm:grid-rows-[1fr]
+    sm:overflow-hidden
+    sm:grid-areas-[sidebar_main,sidebar_footer]
+    md:grid-cols-[theme(spacing.64)_1fr]
+    lg:grid-cols-[theme(spacing.52)_1fr_theme(spacing.52)]
+    lg:grid-areas-[sidebar_main_metabar,sidebar_footer_metabar]
+    xl:grid-cols-[theme(spacing.80)_1fr_theme(spacing.80)];
 
   > *:nth-child(1) {
     @apply grid-in-[sidebar];
   }
 
   > *:nth-child(2) {
-    @apply overflow-y-auto
-      overflow-x-hidden
-      bg-gradient-subtle
-      p-12
-      grid-in-[main]
-      motion-safe:scroll-smooth
-      dark:bg-gradient-subtle-dark
-      xl:px-18
-      xs:bg-none
-      xs:p-4
-      xs:dark:bg-none;
+    @apply contents
+      overflow-y-scroll
+      sm:max-lg:block;
+
+    > *:first-child {
+      @apply overflow-y-auto
+        overflow-x-hidden
+        p-4
+        grid-in-[main]
+        motion-safe:scroll-smooth
+        sm:bg-gradient-subtle
+        sm:bg-fixed
+        sm:p-12
+        sm:dark:bg-gradient-subtle-dark
+        xl:px-18;
+    }
+
+    > *:last-child {
+      @apply mt-8
+        border-t
+        grid-in-[metabar]
+        sm:mt-0
+        lg:max-w-xs
+        lg:border-l
+        lg:border-t-0;
+    }
   }
 
   > *:nth-child(3) {
-    @apply grid-in-[metabar];
-  }
-
-  > *:nth-child(4) {
     @apply sticky
       bottom-0
       flex
@@ -107,7 +120,7 @@
             text-sm
             text-neutral-800
             dark:text-neutral-400
-            xs:text-xs;
+            max-xs:text-xs;
 
           sup {
             @apply cursor-help;
@@ -150,8 +163,8 @@
     justify-center
     bg-gradient-subtle
     dark:bg-gradient-subtle-dark
-    xs:bg-none
-    xs:dark:bg-none;
+    max-xs:bg-none
+    max-xs:dark:bg-none;
 
   main {
     @apply max-w-5xl
@@ -190,10 +203,10 @@
     w-full
     max-w-8xl
     grid-rows-[1fr]
+    max-xs:m-0
+    max-xs:block
     sm:grid-cols-[1fr_theme(spacing.52)]
-    xl:grid-cols-[1fr_theme(spacing.80)]
-    xs:m-0
-    xs:block;
+    xl:grid-cols-[1fr_theme(spacing.80)];
 
   > *:nth-child(1) {
     @apply flex
@@ -206,12 +219,12 @@
       py-14
       dark:border-l-neutral-900
       dark:bg-gradient-subtle-dark
+      max-xs:border-l-0
+      max-xs:bg-none
+      max-xs:pb-4
+      max-xs:dark:bg-none
       md:px-14
-      lg:px-28
-      xs:border-l-0
-      xs:bg-none
-      xs:pb-4
-      xs:dark:bg-none;
+      lg:px-28;
 
     main {
       @apply max-w-[660px]
@@ -219,6 +232,15 @@
         break-all
         lg:break-normal;
     }
+  }
+
+  > *:nth-child(2) {
+    @apply mt-8
+      border-t
+      xs:mt-0
+      xs:max-w-xs
+      xs:border-l
+      xs:border-t-0;
   }
 }
 
