--- a/components/Containers/MetaBar/index.module.css
+++ b/components/Containers/MetaBar/index.module.css
@@ -1,23 +1,16 @@
 .wrapper {
   @apply flex
+    w-full
     flex-col
     items-start
     gap-8
     overflow-y-auto
-    border-l
-    border-l-neutral-200
+    border-neutral-200
     px-4
     py-6
     [overflow-wrap:anywhere]
-    dark:border-l-neutral-900
-    md:max-w-xs
-    lg:px-6
-    xs:mt-8
-    xs:w-full
-    xs:border-l-0
-    xs:border-t
-    xs:border-t-neutral-200
-    xs:dark:border-t-neutral-900;
+    dark:border-neutral-900
+    lg:px-6;
 
   dl {
     @apply w-full;
@@ -45,8 +38,8 @@
         text-neutral-900
         underline
         dark:text-white
-        xs:inline-block
-        xs:py-1;
+        max-xs:inline-block
+        max-xs:py-1;
 
       &:hover {
         @apply text-neutral-800
