--- a/components/Containers/Sidebar/index.module.css
+++ b/components/Containers/Sidebar/index.module.css
@@ -1,30 +1,29 @@
 .wrapper {
   @apply flex
+    w-full
     flex-col
     items-start
     gap-8
     overflow-auto
     overflow-x-hidden
-    border-r
     border-r-neutral-200
     bg-white
     px-4
     py-6
     dark:border-r-neutral-900
     dark:bg-neutral-950
+    sm:border-r
     md:max-w-xs
-    lg:px-6
-    xs:w-full
-    xs:border-r-0;
+    lg:px-6;
 
   > section {
-    @apply flex
-      xs:hidden;
+    @apply hidden
+      sm:flex;
   }
 
   > span {
-    @apply hidden
+    @apply flex
       w-full
-      xs:flex;
+      sm:hidden;
   }
 }
