--- a/styles/markdown.css
+++ b/styles/markdown.css
@@ -79,7 +79,7 @@ main {
   .anchor {
     @apply text-green-600
       dark:text-green-400
-      xs:font-semibold;
+      max-xs:font-semibold;
 
     &:hover {
       @apply text-green-900
@@ -87,12 +87,12 @@ main {
     }
 
     &[role='button'] {
-      @apply xs:font-regular;
+      @apply max-xs:font-regular;
     }
 
     &:has(code) {
-      @apply xs:decoration-neutral-800
-        dark:xs:decoration-neutral-200;
+      @apply max-xs:decoration-neutral-800
+        dark:max-xs:decoration-neutral-200;
     }
   }
 
@@ -144,8 +144,8 @@ main {
         text-neutral-900
         dark:border-neutral-800
         dark:text-white
-        xs:block
-        xs:border-l-0;
+        max-xs:block
+        max-xs:border-l-0;
 
       > a {
         @apply pr-2;
@@ -160,7 +160,7 @@ main {
       @apply sm:border-b-0;
 
       &:last-child {
-        @apply xs:border-b-0;
+        @apply max-xs:border-b-0;
       }
     }
 
