--- a/components/Containers/NavBar/NavItem/index.module.css
+++ b/components/Containers/NavBar/NavItem/index.module.css
@@ -2,7 +2,6 @@
   @apply inline-flex
     items-center
     gap-2
-    rounded
     border-transparent
     px-3
     py-2;
@@ -56,7 +55,7 @@
         dark:text-white;
     }
 
-    &:hover {
+    &:not(.social):hover {
       .label {
         @apply text-green-700
           dark:text-green-400;
