text color change .not(social)

--- a/components/Containers/NavBar/NavItem/index.module.css
+++ b/components/Containers/NavBar/NavItem/index.module.css
@@ -55,7 +55,7 @@
         dark:text-white;
     }
 
-    &:not(.social):hover {
+    &:hover:not(.social) {
       .label {
         @apply text-green-700
           dark:text-green-400;
