excluded .social from .navitem.nav hover

--- a/components/Containers/NavBar/NavItem/index.module.css
+++ b/components/Containers/NavBar/NavItem/index.module.css
@@ -24,7 +24,7 @@
         dark:text-white;
     }
 
-    &:hover {
+    &:hover:not(.social) .label {
       @apply border-b-2
         border-neutral-900
         dark:border-b-2
