fix: sticky footer

--- a/components/Containers/Footer/index.module.css
+++ b/components/Containers/Footer/index.module.css
@@ -47,3 +47,21 @@
     }
   }
 }
+
+.mobileFooter {
+  display: none;
+}
+
+.desktopFooter {
+  display: block;
+}
+
+@media (max-width: 640px) {
+  .mobileFooter {
+    display: block;
+  }
+
+  .desktopFooter {
+    display: none;
+  }
+}
