Enhancement: added navItem hover (#6775)
* added navItem hover

* navItem hover color green-400

* navItem nav.label hover color green-400

* move up the hover logic up by one from nav.label to nav hover .label

* prevent text color change when active

* changed hover color to text-green-700

* reverted to the original propoal

* fixed css formatting mistake

--- a/components/Containers/NavBar/NavItem/index.module.css
+++ b/components/Containers/NavBar/NavItem/index.module.css
@@ -18,6 +18,11 @@
       dark:text-neutral-200;
   }
 
+  &:hover {
+    @apply bg-neutral-100
+      dark:bg-neutral-900;
+  }
+
   &.nav {
     .label {
       @apply text-neutral-900
@@ -45,7 +50,8 @@
     }
 
     &:hover {
-      @apply bg-neutral-100 dark:bg-neutral-900;
+      @apply bg-neutral-100
+        dark:bg-neutral-900;
     }
   }
 }
