refactor: merge horizontal logos

--- a/components/Common/NodejsLogo/index.module.css
+++ b/components/Common/NodejsLogo/index.module.css
@@ -1,12 +1,4 @@
-.nodejsLogoDark {
+.nodejsLogo {
   @apply h-6
-    w-20
-    dark:hidden;
-}
-
-.nodejsLogoLight {
-  @apply hidden
-    h-6
-    w-20
-    dark:block;
+    w-20;
 }
