Fix ESLint directory and some fixes found by Prettier(?).

--- a/apps/site/components/Common/Blockquote/index.module.css
+++ b/apps/site/components/Common/Blockquote/index.module.css
@@ -16,8 +16,8 @@
     dark:text-white;
 
   & cite {
-    @apply text-base
-      font-regular
+    @apply font-regular
+      text-base
       not-italic;
 
     &::before {
