--- a/apps/site/components/Common/Pagination/PaginationListItem/index.module.css
+++ b/apps/site/components/Common/Pagination/PaginationListItem/index.module.css
@@ -1,7 +1,9 @@
 .listItem,
 .listItem:link,
 .listItem:active {
-  @apply flex
+  @apply aria-current:bg-green-600
+    aria-current:text-white
+    flex
     size-10
     items-center
     justify-center
@@ -9,8 +11,6 @@
     px-3
     py-2.5
     text-neutral-800
-    aria-current:bg-green-600
-    aria-current:text-white
     dark:text-neutral-200;
 
   &:hover {
