--- a/apps/site/components/Common/LinkTabs/index.module.css
+++ b/apps/site/components/Common/LinkTabs/index.module.css
@@ -1,13 +1,13 @@
 .tabsList {
-  @apply mb-6
+  @apply font-open-sans
+    max-xs:hidden
+    mb-6
     mt-10
     flex
     gap-2
     border-b
     border-b-neutral-200
-    font-open-sans
-    dark:border-b-neutral-800
-    max-xs:hidden;
+    dark:border-b-neutral-800;
 
   .tabsTrigger {
     @apply border-b-2
@@ -33,9 +33,9 @@
     md:hidden;
 
   > span {
-    @apply my-6
+    @apply max-xs:flex
+      my-6
       hidden
-      w-full
-      max-xs:flex;
+      w-full;
   }
 }
