--- a/apps/site/components/Common/Preview/index.module.css
+++ b/apps/site/components/Common/Preview/index.module.css
@@ -1,25 +1,25 @@
 .root {
-  @apply relative
+  @apply @container/preview
+    relative
     flex
     aspect-[1.90/1]
     items-center
     rounded
     border
     border-neutral-900
-    bg-neutral-950
-    @container/preview;
+    bg-neutral-950;
 
   &::after {
-    @apply absolute
+    @apply bg-gradient-radial
+      @md/preview:blur-3xl
+      absolute
       inset-0
       m-auto
       aspect-square
       w-1/3
       rounded-full
-      bg-gradient-radial
       blur-2xl
-      content-['']
-      @md/preview:blur-3xl;
+      content-[''];
 
     &.announcements {
       @apply from-green-700/90;
@@ -35,7 +35,15 @@
   }
 
   .container {
-    @apply z-10
+    @apply @sm/preview:text-base
+      @md/preview:gap-6
+      @md/preview:text-lg
+      @lg/preview:gap-8
+      @lg/preview:text-xl
+      @xl/preview:gap-12
+      @xl/preview:text-2xl
+      @2xl/preview:text-3xl
+      z-10
       mx-auto
       flex
       w-2/3
@@ -45,37 +53,29 @@
       text-center
       text-xs
       font-semibold
-      text-white
-      @sm/preview:text-base
-      @md/preview:gap-6
-      @md/preview:text-lg
-      @lg/preview:gap-8
-      @lg/preview:text-xl
-      @xl/preview:gap-12
-      @xl/preview:text-2xl
-      @2xl/preview:text-3xl;
+      text-white;
 
     .hexagon {
-      @apply absolute
-        inset-0
-        m-auto
-        size-full
-        @md/preview:h-3/5
+      @apply @md/preview:h-3/5
         @md/preview:w-3/5
         @lg/preview:h-2/3
         @lg/preview:w-2/3
         @xl/preview:h-3/5
         @xl/preview:w-3/5
         @2xl/preview:h-2/3
-        @2xl/preview:w-2/3;
+        @2xl/preview:w-2/3
+        absolute
+        inset-0
+        m-auto
+        size-full;
     }
 
     .logo {
-      @apply mx-auto
-        size-6
-        @md/preview:size-14
+      @apply @md/preview:size-14
         @lg/preview:size-16
-        @xl/preview:size-20;
+        @xl/preview:size-20
+        mx-auto
+        size-6;
     }
   }
 }
