--- a/apps/site/components/Containers/Footer/index.module.css
+++ b/apps/site/components/Containers/Footer/index.module.css
@@ -7,12 +7,12 @@
     border-neutral-200
     bg-white
     py-4
-    dark:border-neutral-900
-    dark:bg-neutral-950
     sm:px-8
     md:flex-row
     md:justify-between
-    md:py-5;
+    md:py-5
+    dark:border-neutral-900
+    dark:bg-neutral-950;
 
   .sectionPrimary {
     @apply flex
