--- a/apps/site/components/Common/Search/index.module.css
+++ b/apps/site/components/Common/Search/index.module.css
@@ -1,5 +1,8 @@
 .searchButton {
   @apply flex
+    grow
+    basis-80
+    items-center
     gap-2
     rounded-md
     bg-neutral-200
@@ -8,6 +11,7 @@
     text-neutral-800
     hover:bg-neutral-300
     hover:text-neutral-900
+    sm:mr-auto
     dark:bg-neutral-900
     dark:text-neutral-600
     dark:hover:bg-neutral-800
