fix(navitem): increase the font-size of navigation items
adjust the font-size of navigation items, especially on mobile

--- a/apps/site/components/Containers/NavBar/NavItem/index.module.css
+++ b/apps/site/components/Containers/NavBar/NavItem/index.module.css
@@ -7,9 +7,9 @@
     py-2;
 
   .label {
-    @apply text-sm
+    @apply text-base
       font-medium
-      leading-5;
+      lg:text-sm;
   }
 
   .icon {
