fix: make the `searchButton` width dynamic to fit the content (#6904)
* fix: make the `searchButton` width dynamic to fit the content

closes ##6903

* fix(search component): adjust `search` component to better adapt to the available space

adjust the `search` component to better adapt to the available space

* fix(navbar): better distribute navigation items according to available space

adjust the main navigation component to better distribute the elements

* fix(navitem): increase the font-size of navigation items

adjust the font-size of navigation items, especially on mobile

--- a/apps/site/components/Common/Search/index.module.css
+++ b/apps/site/components/Common/Search/index.module.css
@@ -1,6 +1,8 @@
 .searchButton {
   @apply flex
-    w-52
+    grow
+    basis-80
+    items-center
     gap-2
     rounded-md
     bg-neutral-200
@@ -9,6 +11,7 @@
     text-neutral-800
     hover:bg-neutral-300
     hover:text-neutral-900
+    sm:mr-auto
     dark:bg-neutral-900
     dark:text-neutral-600
     dark:hover:bg-neutral-800
