--- a/apps/site/layouts/layouts.module.css
+++ b/apps/site/layouts/layouts.module.css
@@ -229,8 +229,7 @@
     main {
       @apply max-w-[660px]
         gap-4
-        break-all
-        lg:break-normal;
+        [overflow-wrap:_anywhere];
     }
   }
 
